examples/test/testpolicy12495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12495
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key48: value40
      key17: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value9
          key7: value48
          key44: value33
      podSelector:
        matchLabels:
          key41: value10
          key21: value0
